# kokkos-sandbox

./: CMakeLists.txt  LICENSE  README.md  build-ray-gnu-device.sh  config-ray-gnu-host.sh  scalarToArray.cpp
